avoid svg/footer overlap

--- a/src/styles/styles.index.less
+++ b/src/styles/styles.index.less
@@ -48,6 +48,7 @@ main, footer {
     margin-top: 2em;
 }
 svg {
+    display: block;
     stroke: none;
     stroke-width: 0;
     fill: none;
